--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-, "src/app/(auth)/signin", "src/app/(auth)/signup", "src/app/(learner)/chat-with-mentor"  ],
+, "src/app/(auth)/signin", "src/app/(auth)/signup"  ],
   "exclude": ["node_modules"]
 }
